launchpad-buildd (198) UNRELEASED; urgency=medium

  * Run charmcraft in verbose mode.
  * Honour proxy arguments when building charms.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 09 Jul 2021 14:08:58 +0100

launchpad-buildd (197) bionic; urgency=medium

  [ Tom Wardill ]
  * Add charm building support

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 14 Jun 2021 16:30:33 +0100

launchpad-buildd (196) bionic; urgency=medium

  * Handle symlinks in OCI image files

 -- Tom Wardill <tom.wardill@canonical.com>  Mon, 17 May 2021 14:19:04 +0100

launchpad-buildd (195) bionic; urgency=medium

  * sbuild-package: Temporarily remove lxd group membership (LP: #1820348).
  * Tolerate missing "apt-get indextargets" on trusty.
  * Add a Juju charm which can be used to deploy local launchpad-buildd
    instances.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 26 Mar 2021 08:54:22 +0000

launchpad-buildd (194) bionic; urgency=medium

  [ Colin Watson ]
  * Stop setting $mailto in .sbuildrc, to work around LP #1859010.
  * Stop overquoting OCI --build-arg options (LP: #1902007).
  * Update production deployment documentation in README.

  [ Tom Wardill ]
  * Fix OCI builds that don't pull another image. 

 -- Tom Wardill <tom.wardill@canonical.com>  Thu, 07 Jan 2021 10:02:27 +0000

launchpad-buildd (193) bionic; urgency=medium

  * Fix handling of bytes arguments passed to BuildManager.runSubProcess.
  * Fix bytes/text handling in RecipeBuilder.buildTree.
  * Fix check-implicit-pointer-functions on Python 3: build logs aren't
    necessarily UTF-8, so process them as bytes (LP: #1897461).

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 28 Sep 2020 13:18:50 +0100

launchpad-buildd (192) bionic; urgency=medium

  * Update Maintainer to launchpad-dev.
  * Handle bytes in shell_escape, fixing recipe builds on Python 3.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 23 Sep 2020 23:49:35 +0100

launchpad-buildd (191) bionic; urgency=medium

  [ Colin Watson ]